# opencode-kanban

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: omo-integration.md
openspec/changes/select-task-base-branch/: design.md  proposal.md  tasks.md
openspec/changes/select-task-base-branch/specs/task-base-branch-selection/: spec.md
src/: lib.rs  ui.rs
src/app/: core.rs  dialogs.rs  messages.rs  mod.rs  runtime.rs  state.rs  update.rs
src/app/input/: key.rs
src/app/workflows/: create_task.rs
src/git/: mod.rs
src/omo/: adapter.rs  fs_reader.rs  mod.rs  notepad.rs  parser.rs  reader.rs  types.rs
tests/: integration.rs  omo_integration.rs
