[package]
name = "opencode-kanban"
version = "0.1.0"
build = "build.rs"
edition = "2024"
description = "Terminal kanban board for managing OpenCode tmux sessions"
license = "MIT"
repository = "https://github.com/TomCC7/opencode-kanban"

[features]
default = ["omo"]
omo = []

[package.metadata.wix]
upgrade-guid = "6F2426D8-489F-4113-8E68-66096E47726E"
path-guid = "9AFE4EED-0C4C-4B0C-B038-9C5D7F843B14"
license = false
eula = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
nucleo = "0.5"
tui-realm-stdlib = "3"
tuirealm = "3"
regex = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.13", features = ["blocking", "json"] }
termlauncher = "0.2"
notify-rust = "4"
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
open = "5"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
